feat(layout): add the layout

--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -1,10 +1,132 @@
 @import 'tailwindcss';
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
+@font-face {
+  font-family: 'Neue Machina';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-PlainLight.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Neue Machina';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-PlainLightItalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Machina';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-PlainRegular.otf') format('opentype');
   font-weight: 400;
-  font-synthesis: none;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Neue Machina';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-PlainRegularItalic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Machina';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-PlainUltrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Neue Machina';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-PlainUltraboldItalic.otf') format('opentype');
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* Inktrap variants */
+@font-face {
+  font-family: 'Neue Machina Inktrap';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-InktrapLight.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Neue Machina Inktrap';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-InktrapLightItalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Machina Inktrap';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-InktrapRegular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Neue Machina Inktrap';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-InktrapRegularItalic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Machina Inktrap';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-InktrapUltrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Neue Machina Inktrap';
+  src: url('@/shared/assets/fonts/neue-machina/PPNeueMachina-InktrapUltraboldItalic.otf') format('opentype');
+  font-weight: 800;
+  font-style: italic;
+}
+
+:root {
+  font-family: 'Neue Machina', sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(7, 7, 9);
+  color: rgb(255, 255, 255);
 }
+
+.text-green {
+    color: #2af16b;
+}
+
+.font-light {
+  font-family: 'Neue Machina', sans-serif;
+  font-weight: 300;
+}
+.font-regular {
+  font-family: 'Neue Machina', sans-serif;
+  font-weight: 400;
+}
+.font-ultrabold {
+  font-family: 'Neue Machina', sans-serif;
+  font-weight: 800;
+}
+
+.font-light-inktrap {
+  font-family: 'Neue Machina Inktrap', sans-serif;
+  font-weight: 300;
+}
+.font-machina-regular-inktrap {
+  font-family: 'Neue Machina Inktrap', sans-serif;
+  font-weight: 400;
+}
+.font-machina-ultrabold-inktrap {
+  font-family: 'Neue Machina Inktrap', sans-serif;
+  font-weight: 800;
+}
+
